<resources>
    <string name="app_name">Gamebox</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="input_user">请输入账号</string>
    <string name="input_password">请输入密码</string>
    <string name="input_password_again">请再次输入密码</string>
    <string name="back">返回</string>
    <string name="exit_login">退出登录</string>
    <string name="edit_information">编辑个人信息</string>
    <string name="feedback">为此应用打分</string>
    <string name="nickname">设置昵称</string>
    <string name="gender">性别</string>
    <string name="birth_date">生日</string>
    <string name="sign">设置签名</string>
    <string name="input_name">请输入昵称</string>
    <string name="input_sign">设置签名</string>
    <string name="game_name">游戏名称</string>
    <string name="game_hour">总时长</string>
    <string name="recent_hour">两周内</string>
    <string name="achievement">成就</string>
    <string name="news">游戏新闻</string>
    <string name="game">游戏库</string>
    <string name="personal_information">个人信息</string>
</resources>